z-indexing issue.

--- a/css/manuscript-viewer/_toolbar.less
+++ b/css/manuscript-viewer/_toolbar.less
@@ -163,6 +163,7 @@
   }
   .close {
     float: none;
+    z-index: 1;
     position: absolute;
     right: 5px;
     top: 5px;
