--- a/css/manuscript-viewer/manuscript-viewer.css
+++ b/css/manuscript-viewer/manuscript-viewer.css
@@ -383,6 +383,7 @@ body.loading .modal {
 }
 #toolbar .close {
   float: none;
+  z-index: 1;
   position: absolute;
   right: 5px;
   top: 5px;
